fix for blizzard employee OPs background color. old inherited color was unreadable.

--- a/css/flair.scss
+++ b/css/flair.scss
@@ -230,7 +230,10 @@ li.flairsample-left { padding-top: 5px; }
 }
 
 .flair-blizzard+a.author, .flair-rainbowdash+a.author,
-.flair-blizzard+a.author:visited, .flair-rainbowdash+a.author:visited { color: #00B4FF !important; }
+.flair-blizzard+a.author:visited, .flair-rainbowdash+a.author:visited { 
+  color: #00B4FF !important; 
+  background: #2C2C2C !important;
+}
 
 /* Blizzard Employees - Job Titles */
 a.author[href$='reddit.com/user/Ghostcrawler']:after, a.author[href$='reddit.com/user/Kalgan']:after,
